--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
      * Print metadata for first 10 files.
      */
     async function listFiles() {
+      hideError();
+
       let response;
       try {
 //         response = await gapi.client.drive.files.list({
@@ -129,12 +131,12 @@
           q:"'1eHo-uOU1LTHQKFJhhd8BpMwiF81NTYmk' in parents", // link ID
         });
       } catch (err) {
-        showError(err);
+        handleError(err);
         return;
       }
       const files = response.result.files;
       if (!files || files.length == 0) {
-        showError(err);
+        handleError(err);
         return;
       }
       // Flatten to string to display
@@ -142,12 +144,21 @@
       $('#content').html(output);
     }
 
-    function showError(err) {
+    function handleError(err) {
       try {
-        $('#error').html(JSON.stringify(err));
+        $('#error').html(JSON.stringify(err) + "<br/>");
       } catch (err) {
         $('#error').html(err.message);
       }
+      showError();
+    }
+
+    function showError() {
+      $('#error').show();
+    }
+
+    function hideError() {
+      $('#error').hide();
     }
   </script>
 </head>
