--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script type="text/javascript">
-    const CLIENT_ID="1015092151085-osb88kjq9jtmve4hv2bisa0ugda4iun0.apps.googleusercontent.com"
-    const API_KEY="AIzaSyC-AjutFl4UADerP1ybHDY3CGvHyUnJKSA"
+    const CLIENT_ID="1015092151085-osb88kjq9jtmve4hv2bisa0ugda4iun0.apps.googleusercontent.com";
+    //const API_KEY="AIzaSyC-AjutFl4UADerP1ybHDY3CGvHyUnJKSA";
+    const API_KEY="AIzaSyCKIA6PZIy_6Y92eISUn7XyIFk_DxRFBEQ";
 
     // Discovery doc URL for APIs used by the quickstart
     const DISCOVERY_DOC = 'https://www.googleapis.com/discovery/v1/apis/drive/v3/rest';
