--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-<title>Google Album</title>
 <head>
-  <title>PPCD transaction file generator</title>
+  <title>Google Drive Gallery</title>
   <meta charset="utf-8">
-  <!-- CSS only -->
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
@@ -22,6 +21,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script type="text/javascript">
+    // Quick start: https://developers.google.com/drive/api/quickstart/js
+    // File list: https://developers.google.com/drive/api/v3/reference/files/list
+    
     const CLIENT_ID="1015092151085-osb88kjq9jtmve4hv2bisa0ugda4iun0.apps.googleusercontent.com";
     const API_KEY="AIzaSyC-AjutFl4UADerP1ybHDY3CGvHyUnJKSA";
     //const API_KEY="AIzaSyCKIA6PZIy_6Y92eISUn7XyIFk_DxRFBEQ";
@@ -121,28 +123,34 @@
     async function listFiles() {
       hideError();
 
-      let response;
       try {
-//         response = await gapi.client.drive.files.list({
+        let files = getFileList();
+
+        $('#content').html(''); // clear original content
+        if (!files || files.length == 0) {
+          return;
+        }
+
+        const output = files.map(JSON.stringify).join('<br/>');
+        $('#content').html(output);
+      } catch (err) {
+        handleError(err);
+      }
+    }
+
+    function getFileList() {
+      //         response = await gapi.client.drive.files.list({
 //           'pageSize': 10,
 //           'fields': 'files(id, name)',
 //         });
         
-        response = await gapi.client.drive.files.list({
-          q:"'1eHo-uOU1LTHQKFJhhd8BpMwiF81NTYmk' in parents", // link ID
-        });
-      } catch (err) {
-        handleError(err);
-        return;
-      }
-      const files = response.result.files;
-      if (!files || files.length == 0) {
-        handleError(err);
-        return;
-      }
-      // Flatten to string to display
-      const output = files.reduce((str, file) => `${str}${file.name} (${file.id}\n`, 'Files:\n');
-      $('#content').html(output);
+      // default fields: id, name, and mimeType
+      let response = await gapi.client.drive.files.list({
+        q: "'1eHo-uOU1LTHQKFJhhd8BpMwiF81NTYmk' in parents", // link ID
+        fields: "nextPageToken, files(id,name,createdTime,modifiedTime,size,thumbnailLink,webViewLink)"
+      });
+
+      return response.result.files;
     }
 
     function handleError(err) {
