--- a/index.html
+++ b/index.html
@@ -87,23 +87,23 @@
       debugAlert("authClicked");
 
       try {
-        tokenClient.callback = async (resp) => {
-          if (resp.error !== undefined) {
-            throw (resp);
-          }
-          document.getElementById('signout_button').style.visibility = 'visible';
-          document.getElementById('authorize_button').innerText = 'Refresh';
-          await listFiles();
-        };
+//         tokenClient.callback = async (resp) => {
+//           if (resp.error !== undefined) {
+//             throw (resp);
+//           }
+//           document.getElementById('signout_button').style.visibility = 'visible';
+//           document.getElementById('authorize_button').innerText = 'Refresh';
+//           await listFiles();
+//         };
 
-        if (gapi.client.getToken() === null) {
-          // Prompt the user to select a Google Account and ask for consent to share their data
-          // when establishing a new session.
-          tokenClient.requestAccessToken({prompt: 'consent'});
-        } else {
-          // Skip display of account chooser and consent dialog for an existing session.
-          tokenClient.requestAccessToken({prompt: ''});
-        }
+//         if (gapi.client.getToken() === null) {
+//           // Prompt the user to select a Google Account and ask for consent to share their data
+//           // when establishing a new session.
+//           tokenClient.requestAccessToken({prompt: 'consent'});
+//         } else {
+//           // Skip display of account chooser and consent dialog for an existing session.
+//           tokenClient.requestAccessToken({prompt: ''});
+//         }
       } catch (err) {
         handleError(err);
       }
