--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
      * Print metadata for first 10 files.
      */
     async function listFiles() {
-//       hideError();
+      hideError();
 
 //       try {
 //         let files = getFileList();
@@ -139,7 +139,7 @@
 //           return;
 //         }
 
-//         const output = files.map(JSON.stringify).join('<br/>');
+//         let output = files.map(JSON.stringify).join('<br/>');
 //         $('#content').html(output);
 //       } catch (err) {
 //         handleError(err);
@@ -153,12 +153,12 @@
 //         });
         
       // default fields: id, name, and mimeType
-//       let response = await gapi.client.drive.files.list({
-//         q: "'1eHo-uOU1LTHQKFJhhd8BpMwiF81NTYmk' in parents", // link ID
-//         fields: "nextPageToken, files(id,name,createdTime,modifiedTime,size,thumbnailLink,webViewLink)"
-//       });
+      let response = await gapi.client.drive.files.list({
+        q: "'1eHo-uOU1LTHQKFJhhd8BpMwiF81NTYmk' in parents", // link ID
+        fields: "nextPageToken, files(id,name,createdTime,modifiedTime,size,thumbnailLink,webViewLink)"
+      });
 
-//       return response.result.files;
+      return response.result.files;
     }
 
     function handleError(err) {
@@ -190,7 +190,7 @@
   <button id="authorize_button" onclick="handleAuthClick()">Authorize</button>
   <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button>
   <input id="debugMode" type="checkbox" checked>Debug
-  version: 3
+  version: 4
   <div id="error" class="alert alert-danger" role="alert"></div>
 
   <div id="content" class="alert alert-info" role="alert"></div>
