--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
   </style>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  
+  <script type="text/javascript">
+    window.onerror = function(error) {
+      alert("window error..." + error );
+    }
+  </script>
 
   <script type="text/javascript">
     // Quick start: https://developers.google.com/drive/api/quickstart/js
