--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         return; // not ready
       }
 
-      $('.action-button').show();
+      $('.action-button').prop('visibility', 'visible');
       $('#debugMode').prop('checked', localStorage.getItem(CACHE_DEBUG_MODE) !== false);
     }
 
@@ -99,7 +99,7 @@
           if (resp.error !== undefined) {
             throw (resp);
           }
-          document.getElementById('signout_button').style.visibility = 'visible';
+          $('#signout_button').prop('visibility', 'visible');
           document.getElementById('authorize_button').innerText = 'Refresh';
           await listFiles();
         };
@@ -129,7 +129,7 @@
         gapi.client.setToken('');
         $('#content').html('');
         document.getElementById('authorize_button').innerText = 'Authorize';
-        document.getElementById('signout_button').style.visibility = 'hidden';
+        $('#signout_button').prop('visibility', 'hidden');
       }
     }
 
@@ -235,10 +235,10 @@
 <body>
   <button id="authorize_button" onclick="handleAuthClick()">Authorize</button>
   <button id="signout_button" class="action-button" onclick="handleSignoutClick()" hidden>Sign Out</button>
-  <button onclick="listFiles()" class="action-button" onchange="storeDebugMode" hidden>List Files</button>
-  <button onclick="getFileInfo(prompt('Input file.id'))">Get File Info</button>
-  <input id="debugMode" type="checkbox" onchange="storeDebugMode()" checked>Debug
-  version: 6
+  <button class="action-button" onclick="listFiles()" hidden>List Files</button>
+  <button class="action-button" onclick="getFileInfo(prompt('Input file.id'))" hidden>Get File Info</button>
+  <input id="debugMode" type="checkbox" onchange="storeDebugMode()" onchange="storeDebugMode" checked>Debug
+  version: 7
 
   <div id="error" class="alert alert-danger" role="alert"></div>
 
