--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
     function showPhoto(id) {
       $('#photoFrame .modal-body img').attr("src", `https://drive.google.com/uc?export=view&id=${id}`);
-      $('#photoFrame').modal({ show: true });
+      //$('#photoFrame').modal({ show: true });
     }
 
     function handleError(err) {
@@ -291,6 +291,10 @@
     </div>
   </div>
 
+  <!-- scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+          crossorigin="anonymous"></script>
   <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
   <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
 </body>
