--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
   <style>
       @media screen {
           .main-container {
@@ -45,6 +47,7 @@
     let tokenClient;
     let gapiInited = false;
     let gisInited = false;
+    let albumId = "1eHo-uOU1LTHQKFJhhd8BpMwiF81NTYmk";
     let nextPageToken = ""; // token for pagination
     let pageSize = 20;
     let fileFields = [
@@ -107,14 +110,13 @@
      *  Sign in the user upon button click.
      */
     function handleAuthClick() {
-      debugAlert("authClicked");
-
       try {
+        signOut();
+
         tokenClient.callback = async (resp) => {
           if (resp.error !== undefined) {
             throw (resp);
           }
-          document.getElementById('authorize_button').innerText = 'Refresh';
           await listFiles();
         };
 
@@ -131,18 +133,19 @@
       }
     }
 
-    /**
-     *  Sign out the user upon button click.
-     */
-    function handleSignoutClick() {
-      debugAlert('signout');
-
+    function signOut() {
       const token = gapi.client.getToken();
       if (token !== null) {
         google.accounts.oauth2.revoke(token.access_token);
         gapi.client.setToken('');
-        document.getElementById('authorize_button').innerText = 'Authorize';
       }
+    }
+
+    function switchAlbum(id) {
+      albumId = id;
+
+      let name = await getAlbumName(id);
+      $("#albumName").html(name);
     }
 
     async function listFiles() {
@@ -169,7 +172,7 @@
 
       // default fields: id, name, and mimeType
       let response = await gapi.client.drive.files.list({
-        q: "'1eHo-uOU1LTHQKFJhhd8BpMwiF81NTYmk' in parents" + criteria, // link ID
+        q: `'${albumId}' in parents ${criteria}`, // link ID
         fields: `nextPageToken, files(${fileFields})`,
         pageSize: pageSize,
         orderBy: "name",
@@ -190,7 +193,16 @@
         }
       }));
     }
- 
+
+    async function getAlbumName(id) {
+      try {
+        let response = await gapi.client.drive.files.get({ fileId: id });
+        return response.result.name;
+      } catch (err) {
+        handleError(err);
+      }
+    }
+
     function getThumbnailLink(id) {
       return "https://drive.google.com/thumbnail?authuser=0&sz=w320&id=" + id;
     }
@@ -207,7 +219,6 @@
 
     function showPhoto(id) {
       $('#photoFrame .modal-body img').attr("src", `https://drive.google.com/uc?export=view&id=${id}`);
-      //$('#photoFrame').modal({ show: true });
     }
 
     function handleError(err) {
@@ -258,16 +269,59 @@
   </script>
 </head>
 <body>
-  <button id="authorize_button" class="btn btn-primary" onclick="handleAuthClick()">Authorize</button>
-  <button id="signout_button" class="action-button btn btn-primary" onclick="handleSignoutClick()">Sign Out</button>
-  <button class="action-button" class="action-button btn btn-primary" onclick="getFileInfo(prompt('Input file.id'))">Get File Info</button>
-  <input id="debugMode" type="checkbox" onchange="storeDebugMode()" onchange="storeDebugMode">Debug
-  version: 8
+  <div class="container text-center">
+    <button id="btnSwitchAccount" class="btn btn-primary" onclick="switchAccount()">
+      <i class="bi bi-person-x-fill"></i>
+    </button>
+    <input id="debugMode" type="checkbox" onchange="storeDebugMode()" onchange="storeDebugMode">Debug
 
-  <div id="info" class="alert alert-info" role="alert" hidden></div>
-  <div id="error" class="alert alert-danger" role="alert" hidden></div>
+    <div id="info" class="alert alert-info" role="alert" hidden></div>
+    <div id="error" class="alert alert-danger" role="alert" hidden></div>
+  </div>
   
-  <button class="action-button btn btn-primary" onclick="listFiles()">Next Page</button>
+  <div class="container text-center">
+    <div class="dropdown">
+      <button id="albumMenu" class="btn btn-secondary dropdown-toggle" type="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+        <i class="bi bi-journal-album"></i>
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="albumMenu">
+        <li>
+          <a class="dropdown-item" href="#" onclick="switchAlbum('1eHo-uOU1LTHQKFJhhd8BpMwiF81NTYmk')">
+          20221008-tokyo-yosakoi
+          </a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="#" onclick="switchAlbum('1yrx_QkJ14QCjcHYYoO1p_8CdZRVOpPPT')">
+          20221009-tokyo-yosakoi
+          </a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="#" onclick="switchAlbum('1ytzgYQc_SBp-PRTmbwb24PXJ9pWRMHL5')">
+          20221015-yokohama-yosakoi
+          </a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="#" onclick="switchAlbum('1ytzgYQc_SBp-PRTmbwb24PXJ9pWRMHL5')">
+          20221016-yokohama-yosakoi
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item active" aria-current="page">
+          <span id="albumName"></span>
+        </li>
+      </ol>
+    </nav>
+
+    <button class="action-button btn btn-primary" onclick="listFiles()">
+      <i class="bi bi-chevron-double-right"></i>
+    </button>
+  </div>
+  
   <div class="container text-center">
     <div id="fileListContainer" class="row row-cols-5">
     </div>
@@ -275,17 +329,14 @@
 
   <!-- Modal -->
   <div class="modal fade" id="photoFrame" tabindex="-1" aria-labelledby="photoFrameLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-xl">
       <div class="modal-content">
         <div class="modal-header">
           <h1 class="modal-title fs-5" id="photoFrameLabel">Photo</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <img src="" alt="" />
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <img class="img-fluid" src="" alt="" />
         </div>
       </div>
     </div>
